--- a/style.css
+++ b/style.css
@@ -46,13 +46,13 @@
 .headings{
     margin-top: 30px;
 }
-.homeBody{
+body{
     background-color:black;
 }
 /* __________________________________________________________ */
-.aboutBody{
+/* body{
     background-color: black !important;
-}
+} */
 
 .aboutme{
     margin-top: 100px;
